Remove usages of legacy system